# sight_words

./: .gitignore  .pylintrc  README.md  noxfile.py  pyproject.toml  setup.cfg  setup.py
sight_words/: cli.py  data_rep.py  data_utils.py  game.py  io.py  ml.py  reports.py
sight_words/data/: boxcar.yml  boxcar_children.txt  boxcar_index.yml  hardy_house_on_a_cliff.yml  hardy_house_on_a_cliff_index.yml  hardy_tower_treasure.yml  hardy_tower_treasure_index.yml  house_on_cliff.txt  old_mill.txt  p_and_p.txt  p_and_p.yml  p_and_p_index.yml  sight_words.yml  spelling_bee.yml  tower_treasure.txt
sight_words/games/: stacking.py  tetris.py
tests/: test_data_rep.py  test_data_utils.py  test_io.py  test_ml.py
