[metadata]
name = sight_words
description = A quick app to help test sight words
long_description = file: README.md
url = https://github.com/davidlibland/sight_words
author = David Li-Bland
author_email = david.libland@gmail.com

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    cytoolz>=0.9.0
    numpy>=1.19.1
    PyYAML>=5.1
    click>=7.1.2
    pyttsx3>=2.90
    nltk>=3.5
zip_safe = False

[options.packages.find]
include =
    censored_data*

[options.package_data]
# for any package, include csv files
* =
    *.yml

[options.entry_points]
# See https://setuptools.readthedocs.io/en/latest/setuptools.html#automatic-script-creation
# and https://stackoverflow.com/a/48891252
console_scripts =
    word_practice = sight_words.cli:main

[options.extras_require]
examples =
dev =
    dunamai==1.3.0
    pylint==2.6.0
    pytype==2020.8.28
    pytest>=6.0.1
    pytest-xdist==1.34.0
    pytest-cov>=2.10.0
    black==20.8b1
    hypothesis[numpy]==5.29.0
    nox>=2019.8.20
    pdoc3>=0.7.1
    invoke>=1.4.1
